# spot_ros2

./: .gitignore  .gitmodules  README.md  hello_spot.py  install_spot_ros2.sh  starter.sh  starter_spotless.sh
spot_driver/config/: spot_ros_airlab.yaml  spot_ros_airlab_2.yaml
spot_plan/: README.md  package.xml  setup.cfg  setup.py
spot_plan/docs/: walk_around.md  walk_forward.md
spot_plan/spot_plan/: batch_trajectory.py  localize.py  walk_around_localize.py  walk_around_manipulate.py  walk_forward.py  walk_on_stair.py
