<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_plan</name>
  <version>0.0.0</version>
  <description>Using ROS 2 to control a Spot do Bi-level Planning</description>
  <maintainer email="bowenli2@andrew.cmu.edu">CMU</maintainer>
  <license>MIT</license>

  <exec_depend>bdai_ros2_wrappers</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
